load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

proto_library(
    name = "trisacrypto_trisa_api_v1beta1_proto",
    srcs = [
        "trisacrypto/trisa/api/v1beta1/api.proto",
        "trisacrypto/trisa/api/v1beta1/errors.proto",
        "trisacrypto/trisa/data/generic/v1beta1/transaction.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
    strip_import_prefix = "trisacrypto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "trisacrypto_trisa_ivms101_proto",
    srcs = [
        "trisacrypto/trisa/ivms101/enum.proto",
        "trisacrypto/trisa/ivms101/identity.proto",
        "trisacrypto/trisa/ivms101/ivms101.proto",
    ],
    strip_import_prefix = "trisacrypto/trisa",
    visibility = ["//visibility:public"],
)