load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "internal_proto",
    srcs = ["pagination.proto"],
    visibility = ["//apis/traveler:__subpackages__"],
    deps = [
        "//apis/traveler/v1:traveler_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "internal_go_proto",
    importpath = "github.com/gingerballsinc/singularity/apis/traveler/internal",
    proto = ":internal_proto",
    visibility = ["//apis/traveler:__subpackages__"],
    deps = ["//apis/traveler/v1:traveler"],
)

go_library(
    name = "internal",
    embed = [":internal_go_proto"],
    importpath = "github.com/gingerballsinc/singularity/apis/traveler/internal",
    visibility = ["//apis/traveler:__subpackages__"],
)

go_proto_library(
    name = "pagination_go_proto",
    importpath = "github.com/gingerballsinc/singularity/apis/traveler/pagination",
    proto = ":internal_proto",
    visibility = ["//visibility:public"],
    deps = ["//apis/traveler/v1:traveler"],
)

go_library(
    name = "pagination",
    embed = [":pagination_go_proto"],
    importpath = "github.com/gingerballsinc/singularity/apis/traveler/pagination",
    visibility = ["//visibility:public"],
)