load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "traveler_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//traveler/common/v1:common_proto",
        "//:trisacrypto_trisa_api_v1beta1_proto",
        "@com_google_protobuf//:any_proto",
    ],
)
