load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "common_proto",
    srcs = [
        "address.proto",
        "errors.proto",
        "transaction.proto",
        "sunrise.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:trisacrypto_trisa_api_v1beta1_proto",
    ],
)
